--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       "./node_modules/@types"
     ]
   },
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "cdk.out"
