--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.143",
     "@types/jest": "^29.5.12",
-    "@types/node": "20.14.9",
+    "@types/node": "^20.14.9",
     "aws-cdk": "2.150.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
@@ -20,7 +21,9 @@
     "typescript": "~5.5.3"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.637.0",
     "aws-cdk-lib": "^2.150.0",
+    "aws-sdk": "^2.1682.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
